rbx_xml/tests/snapshots/test_files__union.snap
---
source: rbx_xml/tests/test-files.rs
expression: viewer.view_children(&dom)

---
- referent: referent-0
  name: Red Union 1
  class: UnionOperation
  properties:
    Anchored:
      Bool: false
    AssetId:
      Content: ""
    AttributesSerialize:
      BinaryString: ""
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        Position:
          - 0.0
          - 0.0
          - 0.0
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 196
        - 40
        - 28
    CustomPhysicalProperties:
      PhysicalProperties: Default
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    PhysicalConfigData:
      len: 1803
      hash: db0e2bce2a871addfc49da3894a9b0c8ef97b3b83c962717ece20aa97635fee3
    Reflectance:
      Float32: 0.0
    RenderFidelity:
      Enum: 1
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0.0
        - 0.0
        - 0.0
    Size:
      Vector3:
        - 5.0
        - 2.0
        - 2.0
    SmoothingAngle:
      Float32: 0.0
    SourceAssetId:
      Int64: -1
    Tags:
      BinaryString: ""
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0.0
    UsePartColor:
      Bool: false
    Velocity:
      Vector3:
        - 0.0
        - 0.0
        - 0.0
  children: []
- referent: referent-1
  name: Red Union 2
  class: UnionOperation
  properties:
    Anchored:
      Bool: false
    AssetId:
      Content: ""
    AttributesSerialize:
      BinaryString: ""
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        Position:
          - -7.0
          - 0.0
          - 0.0
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 196
        - 40
        - 28
    CustomPhysicalProperties:
      PhysicalProperties: Default
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    PhysicalConfigData:
      len: 1803
      hash: db0e2bce2a871addfc49da3894a9b0c8ef97b3b83c962717ece20aa97635fee3
    Reflectance:
      Float32: 0.0
    RenderFidelity:
      Enum: 1
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0.0
        - 0.0
        - 0.0
    Size:
      Vector3:
        - 5.0
        - 2.0
        - 2.0
    SmoothingAngle:
      Float32: 0.0
    SourceAssetId:
      Int64: -1
    Tags:
      BinaryString: ""
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0.0
    UsePartColor:
      Bool: false
    Velocity:
      Vector3:
        - 0.0
        - 0.0
        - 0.0
  children: []
- referent: referent-2
  name: Blue Union
  class: UnionOperation
  properties:
    Anchored:
      Bool: false
    AssetId:
      Content: ""
    AttributesSerialize:
      BinaryString: ""
    BackParamA:
      Float32: -0.5
    BackParamB:
      Float32: 0.5
    BackSurface:
      Enum: 0
    BackSurfaceInput:
      Enum: 0
    BottomParamA:
      Float32: -0.5
    BottomParamB:
      Float32: 0.5
    BottomSurface:
      Enum: 0
    BottomSurfaceInput:
      Enum: 0
    CFrame:
      CFrame:
        Position:
          - -4.0
          - -3.5
          - 0.0
        Orientation:
          - - 1.0
            - 0.0
            - 0.0
          - - 0.0
            - 1.0
            - 0.0
          - - 0.0
            - 0.0
            - 1.0
    CanCollide:
      Bool: true
    CastShadow:
      Bool: true
    CollisionGroupId:
      Int32: 0
    Color:
      Color3uint8:
        - 13
        - 105
        - 172
    CustomPhysicalProperties:
      PhysicalProperties: Default
    FrontParamA:
      Float32: -0.5
    FrontParamB:
      Float32: 0.5
    FrontSurface:
      Enum: 0
    FrontSurfaceInput:
      Enum: 0
    LeftParamA:
      Float32: -0.5
    LeftParamB:
      Float32: 0.5
    LeftSurface:
      Enum: 0
    LeftSurfaceInput:
      Enum: 0
    Locked:
      Bool: false
    Massless:
      Bool: false
    Material:
      Enum: 256
    PhysicalConfigData:
      len: 1367
      hash: cc62d7045ec238081b7ebbd97ce5ce7dc15166e688168c307247089135718bdb
    Reflectance:
      Float32: 0.0
    RenderFidelity:
      Enum: 1
    RightParamA:
      Float32: -0.5
    RightParamB:
      Float32: 0.5
    RightSurface:
      Enum: 0
    RightSurfaceInput:
      Enum: 0
    RootPriority:
      Int32: 0
    RotVelocity:
      Vector3:
        - 0.0
        - 0.0
        - 0.0
    Size:
      Vector3:
        - 4.0
        - 2.0
        - 2.0
    SmoothingAngle:
      Float32: 0.0
    SourceAssetId:
      Int64: -1
    Tags:
      BinaryString: ""
    TopParamA:
      Float32: -0.5
    TopParamB:
      Float32: 0.5
    TopSurface:
      Enum: 0
    TopSurfaceInput:
      Enum: 0
    Transparency:
      Float32: 0.0
    UsePartColor:
      Bool: false
    Velocity:
      Vector3:
        - 0.0
        - 0.0
        - 0.0
  children: []

